# build-with-adk

./: .gitignore  README.md
ad-campaign-agent/: .gitignore  DEMO_GUIDE.md  DEPLOYMENT.md  Makefile  README.md  campaigns.db
ad-campaign-agent/.docs/: architecture_plan.md  basic_plan.md  get_started_nano_banana.py
ad-campaign-agent/app/: agent.py  agent_engine_app.py  config.py  requirements.txt  (+1 more)
adk-deep-research/: .gitignore  claude.md
adk-equity-deep-research/: DEVELOPER_GUIDE.md  README.md  agent.py  requirements.txt
retail-ai-location-strategy/: README.md
retail_ai_location_strategy/: [Draft]Blog.md  retail_ai_location_strategy_gemini_3.py
retail_ai_location_strategy_adk/: .env.example  Makefile  README.md  __init__.py  agent.py  config.py  pyproject.toml  requirements.txt
retail_ai_location_strategy_adk/callbacks/: pipeline_callbacks.py
retail_ai_location_strategy_adk/deployment/: __init__.py  deploy.py  test_deployment.py
retail_ai_location_strategy_adk/frontend/: package-lock.json  package.json
retail_ai_location_strategy_adk/frontend/backend/: main.py
retail_ai_location_strategy_adk/frontend/components/: ScrollableMarkdown.tsx  StepOutputContent.tsx  TabbedGapAnalysis.tsx
retail_ai_location_strategy_adk/frontend/lib/: types.ts
retail_ai_location_strategy_adk/sub_agents/: competitor_mapping.py  gap_analysis.py  infographic_generator.py  intake_agent.py  market_research.py  report_generator.py  strategy_advisor.py
retail_ai_location_strategy_adk/tools/: __init__.py  html_report_generator.py  image_generator.py  places_search.py
(+76 files in other folders)
